# src/routes/channelRoutes.js
@@ -1,13 +1,40 @@
 import express from 'express';
-import { createChannel, getAllChannels, } from '../controllers/channelController.js';
-import { authenticateToken } from '../middleware/authMiddleware.js';
+import {
+    getAllChannelsHandler,
+    getChannelByIdHandler,
+    createChannelHandler,
+    updateChannelHandler,
+    deleteChannelHandler,
+} from '../controllers/channelController.js';
+
+import {
+    validateId,
+    validateCreateChannel,
+    validateUpdateChannel,
+    //validateChannelQuery,
+} from '../middleware/channelValidators.js';
+
+import { authenticate } from '../middleware/authenticate.js';
+import { authorizeChannelOwnership, } from '../middleware/authorizeOwnership.js';
 
 const router = express.Router();
-
-router.post('/', authenticateToken, createChannel);
-router.get('/', channelController.getAllChannels);
-router.get('/:id', channelController.getChannelById);
-router.put('/:id', authenticateToken, channelController.updateChannel);
-router.delete('/:id', authenticateToken, channelController.deleteChannel);
+router.get('/', /*validateChannelQuery*/ getAllChannelsHandler);
+router.get('/:id', validateId, getChannelByIdHandler);
+router.post('/', authenticate, validateCreateChannel, createChannelHandler);
+router.put(
+    '/:id',
+    authenticate,
+    validateId,
+    authorizeChannelOwnership,
+    validateUpdateChannel,
+    updateChannelHandler,
+);
+router.delete(
+    '/:id',
+    authenticate,
+    validateId,
+    authorizeChannelOwnership,
+    deleteChannelHandler,
+);
 
 export default router;
